Test pug templates

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,10 @@
 doctype html
-html(lang='en')
- head
-   title Hello, Pug!
- body
-   h1 Hello, World!
-   div.remark
-     p Pug rocks!
+html(lang="en")
+
+	head
+		include _head.pug
+		title yay, title
+
+	body
+		main boo ya!
+		include _foot.png
